+ Ajout taquin 4x4 + Ajout heuristic manhattan distance + Ajout méthode wrap_search avec stats + Ajout coût d'une branche dans les paramètres + Fix affichage

--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@ cmake-build-*/
 .idea/**/mongoSettings.xml
 *.iws
 .idea_modules/
+out/
 atlassian-ide-plugin.xml
 .idea/replstate.xml
 com_crashlytics_export_strings.xml
